# ocrd_kraken

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  ocrd-tool.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  docker.yml
ocrd_kraken/: __init__.py  binarize.py  cli.py  common.py  config.py  ocr.py  ocrd-tool.json  recognize.py  segment.py
ocrd_kraken/cli/: binarize.py  recognize.py  segment.py
test/: base.py  test_kraken_binarize.py  test_kraken_ocr.py  test_kraken_segment.py
tests/: base.py  conftest.py  test_binarize.py  test_kraken_binarize.py  test_kraken_ocr.py  test_kraken_segment.py  test_recognize.py  test_segment.py
